Fixed alignment of icons

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,8 @@ body {
 
       &:after, &:before {
         font-size: 32px;
+        margin-left: 10px;
+        margin-right: 10px;
       }
     }
   }
